fixed select color and select arrow not centered

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -45,6 +45,7 @@
       display: inline-block;
 
       select {
+        color: $main-text-color;
         cursor: pointer;
         font-size: $text-size;
         padding: 0;
@@ -60,7 +61,11 @@
       .custom-arrow {
         position: absolute;
         right: 0;
+        top: 0;
+        bottom: 0;
         pointer-events: none;
+        display: flex;
+        align-items: center;
       }
     }
   }
